caddy/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: caddy
  labels:
    name: caddy
    pod-security.kubernetes.io/enforce: privileged #hostPath volumes
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn-version: latest
