caddy/caddy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  namespace: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      automountServiceAccountToken: false
      containers:
        - name: caddy
          image: caddy:2.11.6-alpine@sha256:c776e0c6413b544d0459665e54ec7b8b2a15000c0cbee8b254da0067b1d184ff
          ports:
            - containerPort: 80
          volumeMounts:
            - name: host-www
              mountPath: /srv
            - name: caddy
              mountPath: /etc/caddy
      securityContext: {}
      volumes:
        - name: host-www
          nfs:
            server: 192.168.86.87
            path: /k8s/www
            readOnly: true
        - name: caddy
          nfs:
            server: 192.168.86.87
            path: /k8s/caddy
            readOnly: true
