caddy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: caddy-svc
  namespace: caddy
  labels:
    app: caddy
  annotations:
    "lbipam.cilium.io/sharing-key": "exposed-outside"
    "lbipam.cilium.io/ips": "192.168.86.22"
spec:
  type: loadBalancer
  selector:
    app: caddy
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
