caddy/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: caddy
  namespace: caddy
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: sik75
  hostnames:
    - sik75.aarnihalinen.fi
  rules:
    - backendRefs:
        - name: caddy-svc
          port: 80
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains
---
# Allow the shared Gateway to terminate TLS with the certificate of this namespace
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-tls
  namespace: caddy
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway
  to:
    - group: ""
      kind: Secret
      name: tls-secret
