caddy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: caddy
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.org/client-max-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sik75.aarnihalinen.fi
      secretName: tls-secret
  rules:
    - host: sik75.aarnihalinen.fi
      http: &backend
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-svc
                port:
                  number: 80
